# mcp-proxy

./: CHANGELOG.md  QUICKSTART.md  README.md  config.yaml  config.yaml.example  main.py  proxy_server.py  pyproject.toml  test_processors.py  test_projection_grep.py  test_proxy.py  test_quick.py  test_with_everything.py
docs/: README.md
examples/: README.md  example_usage.py
src/mcp_proxy/: advanced_search.py  config.py  processors.py  server.py
